<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="change_sign">+/-</string>
    <string name="discharge">c</string>
    <string name="power">^</string>

    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tg">tg</string>
    <string name="ctg">ctg</string>
    <string name="exp">exp</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="ln">ln</string>
    <string name="log10">log10</string>
    <string name="log2">log2</string>
    <string name="e">e</string>
    <string name="pi">π</string>

    <string name="change_mode">Change mode</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
