<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.calculator.BasicButtons">

    <GridLayout
        android:id="@+id/basicButtonsGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:id="@+id/discharge"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/discharge"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/power"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/power"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/change_sign"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/change_sign"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/division"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/division"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/seven"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/seven"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/eight"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/eight"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/nine"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/nine"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/multiplication"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/multiplication"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/four"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/four"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/five"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/five"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/six"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/six"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/subtraction"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/subtraction"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/one"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/one"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/two"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/two"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/three"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/three"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/addiction"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/addition"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/zero"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/zero"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/dot"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/dot"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/equal"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:text="@string/equal"
            style="@style/buttonStyle"/>
    </GridLayout>
</FrameLayout>
